# rust-mini-cli

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  rust.yml
crates/learning/: Cargo.toml
crates/learning/src/: lib.rs
crates/learning/src/fahrenheit/: converter.rs
crates/learning/src/rectangle/: area.rs
crates/logentry/: Cargo.toml
crates/logentry/src/: aggregator.rs  app.rs  entry.rs  filter.rs  lib.rs  main.rs  parser.rs
crates/logentry/src/parser/: core.rs  error.rs
crates/logentry/tests/: cli.rs
src/: lib.rs
